log

Wed 13 Mar 2024 08:31:30 PM UTC: 
 tests:  0|7
total_score: 0/70
1107d68
Wed 13 Mar 2024 09:07:12 PM UTC: 
 exercises.c | 47 +++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 47 insertions(+)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
exercises.c:29:1: error: expected identifier or ‘(’ before ‘{’ token
   29 | {
      | ^
exercises.c:46:1: error: expected identifier or ‘(’ before ‘{’ token
   46 | {
      | ^
exercises.c:78:1: error: expected identifier or ‘(’ before ‘{’ token
   78 | {
      | ^
Compilation failed
bc86b78
Wed 13 Mar 2024 09:09:23 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:28:1: error: expected identifier or ‘(’ before ‘{’ token
   28 | {
      | ^
exercises.c:45:1: error: expected identifier or ‘(’ before ‘{’ token
   45 | {
      | ^
exercises.c:77:1: error: expected identifier or ‘(’ before ‘{’ token
   77 | {
      | ^
Compilation failed
1265e66
Wed 13 Mar 2024 09:10:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:45:1: error: expected identifier or ‘(’ before ‘{’ token
   45 | {
      | ^
exercises.c:77:1: error: expected identifier or ‘(’ before ‘{’ token
   77 | {
      | ^
Compilation failed
860c813
Wed 13 Mar 2024 09:13:23 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:45:1: error: expected identifier or ‘(’ before ‘{’ token
   45 | {
      | ^
exercises.c:77:1: error: expected identifier or ‘(’ before ‘{’ token
   77 | {
      | ^
Compilation failed
71a1297
Wed 13 Mar 2024 09:14:01 PM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:80:23: error: statement with no effect [-Werror=unused-value]
   80 |       if (i == 0) aux == arr[i];
      |                   ~~~~^~~~~~~~~
exercises.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4feb2fa
Wed 13 Mar 2024 09:14:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8afbac1
Wed 13 Mar 2024 09:15:22 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:89:1: error: control reaches end of non-void function [-Werror=return-type]
   89 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1257a84
Wed 13 Mar 2024 09:16:56 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:89:1: error: control reaches end of non-void function [-Werror=return-type]
   89 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2ef3aa2
Wed 13 Mar 2024 09:19:20 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4136880
Wed 13 Mar 2024 09:20:14 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
   92 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5a92ad9
Wed 13 Mar 2024 09:20:51 PM UTC: 
 exercises.c | 13 +------------
 1 file changed, 1 insertion(+), 12 deletions(-)
 tests:  0|4
total_score: 30/70
3451cba
Wed 13 Mar 2024 09:21:32 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|4
total_score: 30/70
4333af4
